--- a/tryg-app/index.html
+++ b/tryg-app/index.html
@@ -3,8 +3,20 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>tryg-app</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no, viewport-fit=cover" />
+    <title>Tryg - Familiens Trygged</title>
+    
+    <!-- PWA Meta Tags -->
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="default" />
+    <meta name="apple-mobile-web-app-title" content="Tryg" />
+    <meta name="theme-color" content="#0d9488" />
+    <meta name="description" content="Tryg giver familien tryghed med daglig check-in og forbindelse" />
+    
+    <!-- Prevent text selection and call links on mobile -->
+    <style>
+      body { -webkit-user-select: none; user-select: none; -webkit-tap-highlight-color: transparent; }
+    </style>
   </head>
   <body>
     <div id="root"></div>
