--- a/tryg-app/index.html
+++ b/tryg-app/index.html
@@ -14,12 +14,23 @@
   <meta name="theme-color" content="#0d9488" />
   <meta name="description" content="Tryg giver familien tryghed med daglig check-in og forbindelse" />
 
+  <!-- Premium Typography -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&family=Outfit:wght@400;600;700&display=swap" rel="stylesheet">
+
   <!-- Prevent text selection and call links on mobile -->
   <style>
     body {
+      font-family: 'Inter', system-ui, -apple-system, sans-serif;
       -webkit-user-select: none;
       user-select: none;
       -webkit-tap-highlight-color: transparent;
+    }
+
+    h1, h2, h3 {
+      font-family: 'Outfit', 'Inter', sans-serif;
+      letter-spacing: -0.02em;
     }
   </style>
 </head>
